--- a/Week 2 (HTML)/opdracht 2.1/index.html
+++ b/Week 2 (HTML)/opdracht 2.1/index.html
@@ -13,8 +13,8 @@
 <p style="color:blueviolet"> Er word steeds meer gedaan met games dus er komen altijd nieuwe dingen aan en dat betekent geen verveling.</p>
 <p style="color:blueviolet"> Het spel dat ik op het moment het leukste vind is Valorant</p>
 <br>
-<a href="https://www.youtube.com/watch?v=-kWLTDx264Y">
-<button><img src="Valorant-Ranking-distribution.jpg" alt="valorant html" width="600" height="350"></button>
+<a target="_blank" href="https://www.youtube.com/watch?v=-kWLTDx264Y">
+ <button> <img src="Valorant-Ranking-distribution.jpg" alt="valorant html" width="600" height="350"> </button> 
 </a>
 <p style="color:blueviolet"> Dit is mijn favorite moment van Valorant esports want Zombs clutch de ronde met een Classic terwijl het een 1  vs 3 is.</p>
 <p style="color:blueviolet"> Klik op het plaatje hier boven om het te zien</p>
