--- a/Week 2 (HTML)/opdracht 2.2/index.html
+++ b/Week 2 (HTML)/opdracht 2.2/index.html
@@ -29,6 +29,6 @@
     <h3>Img-tag</h3>
     <p>This element will display an image on the screen. It will always have an ‘src’ attribute which<br> points to the address of the image to be displayed. NOTE: img tags can be self-closing, as in<br> they do not need two tags. Simply put the / before the closing bracket in the first tag:</p>
 <img src="./image2.png" alt="img src">
-<p>More about HTML: </p> <a href="https://medium.com/@iampika/html-and-css-fundamentals-6b8f7d90911b">Medium</a>
+    <p>More about HTML: </p> <a target="_blank" href="https://medium.com/@iampika/html-and-css-fundamentals-6b8f7d90911b">Medium</a>
 </body>
 </html>
