--- a/Week 3 (HTML)/first_year_tcr_exercise/index.html
+++ b/Week 3 (HTML)/first_year_tcr_exercise/index.html
@@ -28,15 +28,18 @@
   <br>
   <h1>HTLM/CSS</h1>  
   <br>
-  <img src="./img/CSS3_and_HTML5_logos_and_wordmarks.svg.png" id="html" width="350"  height="200" /> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, architecto illum! Ea nesciunt corrupti possimus eveniet ipsam quia asperiores. Consequatur ab sunt soluta ut velit mollitia aliquam architecto perspiciatis doloribus!</p>
+  <img src="./img/CSS3_and_HTML5_logos_and_wordmarks.svg.png" id="html" width="350"  height="200" /> 
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, architecto illum! Ea nesciunt corrupti possimus eveniet ipsam quia asperiores. Consequatur ab sunt soluta ut velit mollitia aliquam architecto perspiciatis doloribus!</p>
   <br>
   <h1>JAVASCRIPT</h1>
   <br>
-  <img src="./img/Unofficial_JavaScript_logo_2.svg.png" id="Javascript" width="250" height="200" /> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam aliquam deserunt architecto maiores consequuntur impedit, ea illum aspernatur est nesciunt, quae ut dolorem tempora ratione omnis ullam suscipit fuga id!</p>
+  <img src="./img/Unofficial_JavaScript_logo_2.svg.png" id="Javascript" width="250" height="200" /> 
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam aliquam deserunt architecto maiores consequuntur impedit, ea illum aspernatur est nesciunt, quae ut dolorem tempora ratione omnis ullam suscipit fuga id!</p>
   <br>
   <h1>PHP</h1>
   <br>
-  <img src="./img/downloads.png" id="PHP" width="250" height="125" /> <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos a alias odio voluptates totam necessitatibus cupiditate esse, fugiat aliquid iusto? Fugiat libero rem illo iste voluptas ad laboriosam ab temporibus?</p>
+  <img src="./img/downloads.png" id="PHP" width="250" height="125" /> 
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos a alias odio voluptates totam necessitatibus cupiditate esse, fugiat aliquid iusto? Fugiat libero rem illo iste voluptas ad laboriosam ab temporibus?</p>
   <br> 
   <h1>SQL</h1>
   <br>
