--- a/Week 3 (HTML)/first_year_tcr_exercise/index.html
+++ b/Week 3 (HTML)/first_year_tcr_exercise/index.html
@@ -43,7 +43,8 @@
   <br> 
   <h1>SQL</h1>
   <br>
-  <img src="./img/downloads (1).png" id="SQL" width="250" height="125" /> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem cumque similique amet tenetur nemo, odio rem error at temporibus sunt earum minima illo nesciunt sint laborum labore voluptatum accusantium illum!</p>
+  <img src="./img/downloads (1).png" id="SQL" width="250" height="125" /> 
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem cumque similique amet tenetur nemo, odio rem error at temporibus sunt earum minima illo nesciunt sint laborum labore voluptatum accusantium illum!</p>
   
   </body>
 </html>
