--- a/Week 3 (HTML)/first_year_tcr_exercise/index.html
+++ b/Week 3 (HTML)/first_year_tcr_exercise/index.html
@@ -1,50 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Goldman:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Opdracht 3.1</title>
-  </head>
-  <body>
-    <nav>
-      <img src="./img/hacker.png" id="logo" />
-      <ul>
-        <li><a href="#">HTML/CSS</a></li>
-        <li><a href="#">Javascript</a></li>
-        <li><a href="#">PHP</a></li>
-        <li><a href="#">SQL</a></li>
-      </ul>
-    </nav>
-  <br>
-    <h1>Your First Year TCR Programming Languages</h1>
-  <br>
-  <h1>HTLM/CSS</h1>  
-  <br>
-  <img src="./img/CSS3_and_HTML5_logos_and_wordmarks.svg.png" id="html" width="350"  height="200" /> 
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, architecto illum! Ea nesciunt corrupti possimus eveniet ipsam quia asperiores. Consequatur ab sunt soluta ut velit mollitia aliquam architecto perspiciatis doloribus!</p>
-  <br>
-  <h1>JAVASCRIPT</h1>
-  <br>
-  <img src="./img/Unofficial_JavaScript_logo_2.svg.png" id="Javascript" width="250" height="200" /> 
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam aliquam deserunt architecto maiores consequuntur impedit, ea illum aspernatur est nesciunt, quae ut dolorem tempora ratione omnis ullam suscipit fuga id!</p>
-  <br>
-  <h1>PHP</h1>
-  <br>
-  <img src="./img/downloads.png" id="PHP" width="250" height="125" /> 
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos a alias odio voluptates totam necessitatibus cupiditate esse, fugiat aliquid iusto? Fugiat libero rem illo iste voluptas ad laboriosam ab temporibus?</p>
-  <br> 
-  <h1>SQL</h1>
-  <br>
-  <img src="./img/downloads (1).png" id="SQL" width="250" height="125" /> 
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem cumque similique amet tenetur nemo, odio rem error at temporibus sunt earum minima illo nesciunt sint laborum labore voluptatum accusantium illum!</p>
-  
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Opdracht 3.1</title>
+</head>
+
+<body>
+  <nav>
+    <img src="./img/hacker.png" id="logo" />
+    <ul>
+      <li><a href="#">HTML/CSS</a></li>
+      <li><a href="#">Javascript</a></li>
+      <li><a href="#">PHP</a></li>
+      <li><a href="#">SQL</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section>
+      <header>
+        <h1>Your First Year TCR Programming Languages</h1>
+      </header>
+
+      <section>
+        <h2>Html/css</h2>
+
+        <img src="./img/CSS3_and_HTML5_logos_and_wordmarks.svg.png" id="html" width="350" height="200">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel non nisi fuga commodi rerum maiores magni rem
+          illo a nobis quod, aperiam ipsam possimus voluptates quia ratione, tenetur ullam laudantium!</p>
+      </section>
+
+      <section>
+        <header>
+          <h2>JAVASCRIPT</h2>
+        </header>
+        <img src=" ./img/Unofficial_JavaScript_logo_2.svg.png" id="Javascript" width="250" height="200" />
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam aliquam deserunt architecto maiores
+          consequuntur
+          impedit, ea illum aspernatur est nesciunt, quae ut dolorem tempora ratione omnis ullam suscipit fuga id!</p>
+      </section>
+
+      <section>
+        <header>
+          <h2>PHP</h2>
+        </header>
+        <img src="./img/downloads.png" id="PHP" width="250" height="125" />
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos a alias odio voluptates totam
+          necessitatibus cupiditate esse, fugiat aliquid iusto? Fugiat libero rem illo iste voluptas ad laboriosam ab
+          temporibus?</p>
+      </section>
+
+      <section>
+        <header>
+          <h2>SQL</h2>
+        </header>
+        <img src="./img/downloads (1).png" id="SQL" width="250" height="125" />
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem cumque similique amet tenetur nemo, odio
+          rem
+          error at temporibus sunt earum minima illo nesciunt sint laborum labore voluptatum accusantium illum!</p>
+      </section>
+  </main>
+<footer>
+  <p>Made by <a href=""> Timo</a></p>
+</footer>
+
+</body>
+
 </html>
