--- a/Week 3 (HTML)/opdracht 3,2/index.html
+++ b/Week 3 (HTML)/opdracht 3,2/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opdracht 3.2</title>
 </head>
+
 <body>
-<form>
-Voornaam: <input type="text">
-<br>
-Achternaam: <input type="text">
-<br>
-Man <input type="radio" name="Geslacht" value="" checked="checked"> Vrouw <input type="radio" name="Geslacht">
+    <form>
+        <label for="Voornaam"> Voornaam</label>
+        <input type="text" id="Voornaam" name="Voornaam"><br>
+
+        <label for="Achternaam"> Achternaam</label>
+        <input type="text" id="Achternaam" name="Achternaam"><br>
+
+        Man <input type="radio" name="Geslacht" value="" checked="checked"> Vrouw <input type="radio" name="Geslacht"><br>
+
+        <label for="Aders"> Adres</label>
+        <input type="text" id="Adres" name="Adres"><br>
+
+        <label for="Stad">Stad</label>
+        <input type="text" id="Stad" name="Stad"><br>
+
+        <label for="Land">Land</label>
+        <input type="text" id="Land" name="Land"><br>
 
 
-</form>
+        BSN-nummer: <input type="number">
 
-
-
-
-
-
-
-
+    </form>
 
 </body>
+
 </html>
