--- a/Week 3 (HTML)/first_year_tcr_exercise/index.html
+++ b/Week 3 (HTML)/first_year_tcr_exercise/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <title>Opdracht 3.1</title>
+  <header>html/css</header>
 </head>
 
 <body>
