--- a/Week 3 (HTML)/opdracht 3,2/index.html
+++ b/Week 3 (HTML)/opdracht 3,2/index.html
@@ -11,12 +11,12 @@
 <body>
     <form action="" method="POST">
         <div>
-            <label for="Voornaam"> Voornaam</label>
-            <input type="text" id="Voornaam" name="Voornaam" pattern="[^0-9]*" required>
+            <label for="firstname"> Voornaam</label>
+            <input type="text" id="firstname" name="firstname" pattern="[^0-9]*" required>
         </div>
         <div>
-            <label for="Achternaam"> Achternaam</label>
-            <input type="text" id="Achternaam" name="Achternaam" pattern="[^0-9]*" required>
+            <label for="surname"> Achternaam</label>
+            <input type="text" id="surname" name="surname" pattern="[^0-9]*" required>
         </div>
         <div>
             <label for="gender">geslacht</label>
@@ -28,16 +28,16 @@
             </div>
         </div>
         <div>
-            <label for="Aders"> Adres</label>
-            <input type="text" id="Adres" name="Adres" required>
+            <label for="address"> Adres</label>
+            <input type="text" id="address" name="address" required>
         </div>
         <div>
-            <label for="Stad">Stad</label>
-            <input type="text" id="Stad" name="Stad" required>
+            <label for="city">Stad</label>
+            <input type="text" id="city" name="city" required>
         </div>
         <div>
-            <label for="Land">Land</label>
-            <input type="text" id="Land" name="Land" required>
+            <label for="country">Land</label>
+            <input type="text" id="country" name="country" required>
         </div>
         <div>
             BSN-nummer: <input type="text" maxlength="9" pattern="[0-9]*" required>
@@ -59,10 +59,10 @@
             <input type="email" id="email" name="email" required>
         </div>
         <div>
-            <label for="wachtwoord">wachtwoord</label>
-            <input type="password" id="wachtwoord" name="wachtwoord"required>
+            <label for="password">wachtwoord</label>
+            <input type="password" id="password" name="password"required>
         </div>
-        <input type="submit" value="Submit">
+        <input type="submit" value="submit">
     </form>
 
 </body>
