--- a/Week 3 (HTML)/first_year_tcr_exercise/index.html
+++ b/Week 3 (HTML)/first_year_tcr_exercise/index.html
@@ -32,8 +32,8 @@
       <section>
         <h2>Html/css</h2>
 
-        <img src="./img/CSS3_and_HTML5_logos_and_wordmarks.svg.png" id="html" width="350" height="200">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel non nisi fuga commodi rerum maiores magni rem
+        <img src="./img/CSS3_and_HTML5_logos_and_wordmarks.svg.png" id="html" width="350" height="200" class="html-logo">
+        <p class="html-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel non nisi fuga commodi rerum maiores magni rem
           illo a nobis quod, aperiam ipsam possimus voluptates quia ratione, tenetur ullam laudantium!</p>
       </section>
 
@@ -68,7 +68,7 @@
       </section>
   </main>
 <footer>
-  <p>Made by Timo</p>
+  <p>Copyright Techniek College Rotterdam</p>
 </footer>
 
 </body>
