--- a/Week 3 (HTML)/first_year_tcr_exercise/index.html
+++ b/Week 3 (HTML)/first_year_tcr_exercise/index.html
@@ -20,7 +20,7 @@
       <li><a href="#">Javascript</a></li>
       <li><a href="#">PHP</a></li>
       <li><a href="#">SQL</a></li>
-      <li class="dropdown"><a href="#" class="dropbtn">Jaar 2</a></li>
+      <li class="dropdown"><a href="#" class="dropbtn">Jaar 2</a>
         <div class="dropdown-content">
             <a href="">OOP</a>
             <a href="">Laravel</a>
@@ -28,7 +28,7 @@
 
 
         </div>
-      
+      </li>
     </ul>
   </li>
   </nav>
