--- a/Week 7 (HTML)/Opdracht 7.1/index.html
+++ b/Week 7 (HTML)/Opdracht 7.1/index.html
@@ -8,8 +8,25 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
 
+    <nav class="Logo">
+        <h1>Logo</h1>
+    </nav>
+    
+    <div class="een">
+        <h2>Title</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit non cum quae praesentium. Vel, magnam temporibus sequi esse error provident animi, sint repellendus quisquam totam ipsa maxime est quibusdam dicta.</p>
+    </div>
+
+    <div class="twee">
+        <h2>Title</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum eos, ratione, suscipit recusandae eius quod ipsum officiis ad dolor perferendis alias sunt illum ducimus, expedita atque ex velit accusamus harum!</p>
+    </div>
+
+    <div class="drie">
+        <h2>Title</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt iusto voluptas praesentium odit, suscipit, quas distinctio rerum sequi eos et nostrum quibusdam vitae tempore quasi expedita alias at. Excepturi, repudiandae.</p>
+    </div>
 
 
 </body>
